# mof

./: README.md
operators/python/: pyproject.toml
operators/python/src/mof_operators/: __init__.py  files.py
